fixing img and delete job

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,7 +148,7 @@ a.control_next {
 }
 .buttonBack{
   float: left; 
-  left: 10%;
+  left: 9%;
   position: absolute;
 }
 .buttonBack a {
@@ -171,8 +171,10 @@ a.control_next {
 }
 #imageid{
   width: 100%;
-  position: relative;top: 50%;
-  transform: translateY(-50%);
+  position: relative;
+  /* top: 50%;
+  transform: translateY(-50%); */
+  padding-top: 60px;
 }
 .detail-right{
   padding:20px 25px;
