--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -3,10 +3,13 @@
 }
 
 .dropzone-wrapper {
-    border: 2px dashed #91b0b3;
-    color: #92b0b3;
     position: relative;
     height: 150px;
+    width: 150px;
+    border: 2px solid #E0E0E0;
+    box-sizing: border-box;
+    border-radius: 6px;
+    overflow: hidden;
 }
 .dropzone-desc {
     position: absolute;
@@ -14,9 +17,21 @@
     left: 0;
     right: 0;
     text-align: center;
-    width: 40%;
-    top: 40px;
+    /* width: 40%; */
+    top: 50px;
     font-size: 16px;
+}
+.dropzone-desc img {
+    width: 23px;
+    height: auto;
+}
+.dropzone-desc p {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 130%;
+    color: #828282;
+    margin-bottom: 0px;
+    margin-top: 8px;
 }
 .dropzone,
 .dropzone:focus {
@@ -821,9 +836,15 @@ ul.thumbnails.image_picker_selector li .thumbnail {
     background-color: #FE0000!important;
 }
 .btn-danger{
-    background: #D40F0F; 
-    color: white; 
-    border-radius: 5px;
+    background: #EF4A3C;
+    border-radius: 8px;
+    color: #fff;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 150%;
+    letter-spacing: -0.02em;
+    color: #FFFFFF;
 }
 
 .btn-danger:hover,
@@ -831,7 +852,7 @@ ul.thumbnails.image_picker_selector li .thumbnail {
 .btn-danger:active,
 .btn-danger.active {
   color: #fff;
-  background-color: #f02b2b;
+  background-color: #f15547;
   border-color: #f66060;
 }
 
@@ -1852,6 +1873,32 @@ n.otif-modal .notify-drop-title{
 @keyframes toastout {
     from {right: 30px; opacity: 1;}
     to {right: 0; opacity: 0;}
+}
+
+.input-title-news input {
+    border: none;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    color: #828282;
+}
+.input-title-news input:focus {
+    box-shadow: inset 0 -1px 0 #fff;
+}
+.input-title-news input::placeholder {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    color: #828282;
+}
+
+.summernote-news-wrapper .note-editor.note-frame {
+    border-radius: 10px !important;
+    overflow: hidden;
 }
 
 @media only screen
