--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -294,6 +294,12 @@
 }
 .select2-container--default .select2-selection--single {
     border: 1px solid #aaa!important;
+    height: calc(1.5em + .75rem + 2px);
+    display: flex;
+    align-items: center;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    margin-top: 0px;
 }
 .custom-font-volume-transaksi {
     font-size: 25px;
